[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inn-tools"
version = "0.1.0"
description = "Validation and region lookup for Russian business IDs: ИНН, ОГРН, ОГРНИП, КПП, СНИЛС"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "KontragentPro", email = "info@kontragentpro.ru" }]
keywords = ["инн", "огрн", "огрнип", "снилс", "кпп", "inn", "ogrn", "validation", "russia", "egrul"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
    "Natural Language :: Russian",
]
dependencies = []

[project.urls]
Homepage = "https://kontragentpro.ru"
Repository = "https://github.com/kontragentpro/inn-tools"

[project.scripts]
inn-tools = "inn_tools.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/inn_tools"]
